коммит и пуш 12.2 чтобы сдать ДЗ попытка 1

--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,41 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+#/logs/(*.log|*.txt)
+**.log
+**.txt
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
